[tool.poetry]
name = "fast-api-tutorial"
version = "0.1.0"
description = ""
authors = ["Héctor Lozada"]
readme = "README.md"
packages = [{include = "fast_api_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
